--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-  "author": "Nathan LaFreniere <quitlahok@gmail.com> (https://github.com/nlf)",
+  "author": "Tyr Chen <tyr.chen@gmail.com> (https://github.com/tyrchen)",
   "name": "precommit-hook",
   "description": "A useful pre-commit hook for git based projects that lints and runs npm test",
   "version": "3.0.0",
   "license": "MIT",
-  "homepage": "https://github.com/nlf/precommit-hook",
+  "homepage": "https://github.com/tyrchen/precommit-hook",
   "repository": {
-    "url": "https://github.com/nlf/precommit-hook.git"
+    "url": "https://github.com/tyrchen/precommit-hook.git"
   },
   "dependencies": {
     "git-validate": "^2.0.0",
-    "jshint": "*"
+    "eslint": "^1.3.1",
+    "eslint-config-tyrchen": "0.0.8",
+    "eslint-plugin-react": "^3.3.1",
+    "eslint-plugin-react": "^3.3.1"
   },
   "scripts": {
     "install": "node bin/install"
