--- a/package.json
+++ b/package.json
@@ -10,10 +10,7 @@
   },
   "dependencies": {
     "git-validate": "^2.0.0",
-    "eslint": "^1.3.1",
-    "eslint-config-tyrchen": "0.0.8",
-    "eslint-plugin-react": "^3.3.1",
-    "eslint-plugin-react": "^3.3.1"
+    "eslint": "*",
   },
   "scripts": {
     "install": "node bin/install"
