--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "author": "Tyr Chen <tyr.chen@gmail.com> (https://github.com/tyrchen)",
-  "name": "precommit-hook-tyrchen",
+  "name": "precommit-hook-adrise",
   "description": "A useful pre-commit hook for git based projects that lints and runs npm test",
   "version": "4.2.0",
   "license": "MIT",
-  "homepage": "https://github.com/tyrchen/precommit-hook",
+  "homepage": "https://github.com/adrise/precommit-hook",
   "repository": {
-    "url": "https://github.com/tyrchen/precommit-hook.git"
+    "url": "https://github.com/adrise/precommit-hook.git"
   },
   "dependencies": {
     "git-validate-tyrchen": "*"
